# monorepo-key

./: .gitignore  README.md  pubspec.yaml
apps/android_ime/: README.md
apps/ios_keyboard/: README.md
apps/macos_ime/: Package.swift  README.md
apps/macos_ime/App/: AppDelegate.swift  ClipboardHistoryWindow.swift  ClipboardManager.swift  EventTapController.swift  KeyCodeMap.swift  KeyOutput.swift  KeyboardLayout.swift  LoginItem.swift  Permissions.swift  SettingsStore.swift  SmartSwitch.swift  main.swift
apps/macos_ime/Assets/: AppIcon.icns
apps/macos_ime/Sources/VietEngine/: AutoCorrect.swift  AutoCorrectDictionary.swift  Engine.swift  LegacyCodeTable.swift  Macro.swift  TextConverter.swift  VietModel.swift  VietSyllable.swift  VietTable.swift
apps/macos_ime/Tests/VietEngineTests/: AutoCorrectTests.swift  BackspaceRetypeTests.swift  BrowserDoubleTypeTests.swift  CorpusRegressionTests.swift  DefaultPairsCheck.swift  EnglishRestoreTests.swift  MacroTests.swift  NonVietClusterTests.swift  ParagraphSimTests.swift  SpellCheckTests.swift  TextConverterTests.swift  ToneMarkAfterFinalConsonantTests.swift  VietEngineTests.swift  VietSyllableTests.swift
apps/macos_ime/scripts/: build-app.sh  build-dmg.sh  build-icons.sh
apps/settings_ui/: README.md  pubspec.yaml
apps/settings_ui/lib/: main.dart
apps/settings_ui/lib/src/models/: hotkey.dart  settings.dart
apps/settings_ui/lib/src/pages/: convert_tool_page.dart  onboarding_screen.dart  settings_page.dart
apps/settings_ui/lib/src/services/: permission_status_service.dart  preview_engine.dart  settings_service.dart  update_service.dart
apps/settings_ui/lib/src/theme/: app_theme.dart
apps/settings_ui/lib/src/widgets/: hotkey_recorder.dart  pixel.dart  pixel_controls.dart
apps/settings_ui/macos/Runner/: DebugProfile.entitlements  Release.entitlements
apps/settings_ui/macos/Runner.xcodeproj/: project.pbxproj
apps/settings_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/settings_ui/macos/Runner/Configs/: AppInfo.xcconfig
apps/settings_ui/test/: hotkey_test.dart  widget_test.dart
apps/windows_ime/: CMakeLists.txt  README.md
apps/windows_ime/engine/: .gitignore  auto_correct.cpp  auto_correct.h  engine.cpp  engine.h  macro.cpp  macro.h  test_engine.cpp  text_converter.cpp  text_converter.h  viet_model.h  viet_syllable.cpp  viet_syllable.h  viet_table.cpp  viet_table.h
apps/windows_ime/tsf/: BowGoTextService.cpp  BowGoTextService.h  BowKeyTextService.cpp  BowKeyTextService.h  dll_main.cpp
